# stu-wrapped

./: .dockerignore  .gitignore  Dockerfile  app.py  email_watcher.py  jobs.py  name_map.py  pyproject.toml  requirements.txt  scraper.py  worker.js  wrangler.toml
static/css/: dashboard.css  main.css  wrapped.css
static/js/: dashboard.js  poll.js  wrapped.js
templates/: base.html  dashboard.html  index.html  waiting.html  wrapped.html
